--- a/media/css/editor.css
+++ b/media/css/editor.css
@@ -12,6 +12,7 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
+  box-shadow: 0 -1px 12px #bbb;
 }
 
 #thimble-header {
@@ -21,8 +22,6 @@ html, body {
   right: 0;
   height: 79px;
 
-  background-image: url("../img/header-gradient.png");
-  background-position: 0 0;
   border-top: 2px solid white;
   
   z-index: 2;
