Super ghetto feedback mechanism.
This is a super hacked-up logging system for QA that monitors
credited behaviors, earned badges, user agent strings, ajax
success/error information, and window.onerror information, while
doing its best to strip out PII. When the user clicks 'feedback', they
are asked for comments and a JSON blob containing their log and comments
are posted via hackpub (an S3 proxy) to bugs.hksr.us.

--- a/webpagemaker/editor/templates/editor/editor.html
+++ b/webpagemaker/editor/templates/editor/editor.html
@@ -61,10 +61,12 @@
           BrowserIDAjax = require("thimble/browserid-ajax"),
           Clopenbadger = require("clopenbadger/clopenbadger"),
           WebmakerNav = require("webmaker-nav"),
+          QALog = require("thimble/qa-log"),
           webmakerNav = new WebmakerNav({
             container: $("#webmaker-nav")[0],
             loginBtnCallback: function() { auth.login(); },
-            logoutBtnCallback: function() { auth.logout(); }
+            logoutBtnCallback: function() { auth.logout(); },
+            feedbackCallback: function() { QALog.report(); return false; }
           }),
           auth = BrowserIDAjax({
             email: "{{ user.email }}",
@@ -81,18 +83,25 @@
             container: $("#thimble-friendlycode-holder")
           }),
           badger = null,
-          credit = function(behavior) { badger && badger.credit(behavior); };
+          credit = function(behavior) {
+            badger && badger.credit(behavior);
+            QALog.log("credit", behavior);
+          };
 
       {% if USE_FAKE_CLOPENBADGER is defined %}
       require("fake-thimble-badges");
       {% endif %}
-      
+
       auth.on("login", function() {
         webmakerNav.views.login({username: auth.email});
         badger = Clopenbadger({
           server: "{{ CLOPENBADGER_URL }}",
           token: auth.clopenbadgerToken,
           email: auth.email
+        });
+        badger.on('award', function(badges) { QALog.log("award", badges); });
+        badger.on('change:earnedBadges', function() {
+          QALog.log("change:earnedBadges", Object.keys(badger.earnedBadges));
         });
         badgeUI.setBadger(badger);
         credit("LOGGED_IN");
