Show login error popover.
Fixes #568.

--- a/webpagemaker/editor/templates/editor/editor.html
+++ b/webpagemaker/editor/templates/editor/editor.html
@@ -114,7 +114,10 @@
         badger = null;
         webmakerNav.views.logout();
         badgeUI.setBadger(badger);
+      }).on("login:error", function() {
+        webmakerNav.showLoginError();
       });
+      
       auth.trigger(auth.email ? 'login' : 'logout', auth);
 
       editor.ready.done(function() {
