--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -50,6 +50,16 @@
       }}
 
       #}
+      {{ project(
+           title       = "Portfolio Maker",
+           description = "Build your online portfolio using Thimble and share your genius with the world!", 
+           author      = "Mozilla",
+           url         = url('view_project', 'portfoliomaker'),
+           img         = "/media/img/projects/portfoliomaker.png",
+         ) 
+      }}
+
+
 	    {{ project(
            title       = "Make Your Own Animal",
            description = "Mix and match elements to create your own amazing creature. Draw from some of the world's most Evolutionarily Distinct and Globally Endangered animals (EDGE species) to remix, build and name your own fantastic animal&mdash;think “Elephwhal”, “Rhinogator” or “Bunnel”&mdash;along with a web page to introduce them to the world.", 
