added o2 and portfolio project meta stuff, one o2 project is broken...commented out for now

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -52,13 +52,32 @@
       #}
 
       {{ project(
+           title       = "Hello World",
+           description = "Introduce yourself to the world and learn some basic HTML!", 
+           author      = "O2",
+           url         = url('edit_project', 'o2_helloworld'),
+           img         = "/media/img/projects/o2_helloworld.png",
+         ) 
+      }}
+
+{#      {{ project(
+           title       = "The Pitch!",
+           description = "Create a pitch for your idea and get the HTML smarts to put it on the web. ", 
+           author      = "Mozilla",
+           url         = url('edit_project', 'o2_thepitch'),
+           img         = "/media/img/projects/o2_thepitch.png",
+         ) 
+      }} #}
+
+      {{ project(
            title       = "Portfolio Maker",
            description = "Build your online portfolio using Thimble and share your genius with the world!", 
            author      = "Mozilla",
-           url         = url('view_project', 'portfoliomaker'),
+           url         = url('edit_project', 'portfoliomaker'),
            img         = "/media/img/projects/portfoliomaker.png",
          ) 
       }}
+
 
       {{ project(
            title       = "Open Webville",
