--- a/webpagemaker/editor/templates/editor/editor.html
+++ b/webpagemaker/editor/templates/editor/editor.html
@@ -124,7 +124,7 @@
         HTMLBehaviors.attachProbes(editor.codeMirror, credit);
       });
       editor.editor.panes.preview.on('change:title', function(title){ 
-        $('.header-content .project-info .title').html(title);
+        $('.header-content .project-info .title').text(title);
       });
       editor.publishUI.on('publish', function(info) {
         // TODO: Would be nice if we could submit info.viewURL as
