Remove extraneous closing div tag

--- a/webpagemaker/learning_projects/templates/learning_projects/BTWF_campaign.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/BTWF_campaign.html
@@ -119,7 +119,7 @@ These are also known as "named character references" or "HTML entities." Learn m
 -->
 
         <p>&ldquo;Embrace what makes you unique, even if it makes others uncomfortable.&rdquo;<br>
-        - Janelle Monae</p></div>
+        - Janelle Monae</p>
       </div>
     </div>
   </div>
