Changing & to &amp; and a minor whitespace correction

--- a/webpagemaker/learning_projects/templates/learning_projects/BTWF_campaign.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/BTWF_campaign.html
@@ -52,12 +52,12 @@ Use the <br> tags wherever you want to have the text break to the next line. Not
 
       <br><br>THE CENTER
       <br>208 W. 13th st., NY, 10011, US
-      <br>LGBT & Questioning | 212 620 7310
-      <br>Participate in LGBTQ related discussion groups, info sessions, and various   resources.
+      <br>LGBT &amp; Questioning | 212 620 7310
+      <br>Participate in LGBTQ related discussion groups, info sessions, and various resources.
 
       <br><br>SYLVIA RIVERA LAW PROJECT
       <br>147 W 24th St, 5th Floor, NY, 10011, US
-      <br>LGBT & Questioning | 212-337-8550
+      <br>LGBT &amp; Questioning | 212-337-8550
       <br>SRLP provides legal aid to transgender persons of color and/or of low income.
 
       <br><br>MCCNY CHARITIES
