--- a/webpagemaker/learning_projects/static/BTWF_campaign/btwf_campaign.css
+++ b/webpagemaker/learning_projects/static/BTWF_campaign/btwf_campaign.css
@@ -23,7 +23,8 @@ body {
 }
 
 strong {
-font-family: 'Open Sans Bold';
+  font-family: 'Open Sans Bold';
+  font-weight: normal;
 }
 
 .content_wrapper {
