--- a/webpagemaker/learning_projects/static/BTWF_local_meetup/btwf_local.css
+++ b/webpagemaker/learning_projects/static/BTWF_local_meetup/btwf_local.css
@@ -14,8 +14,10 @@ body {
    padding-top: 10px;
    margin: 0 auto;
    background-image: url('btwf_bg.png');
+   background-color: #0b0b0b;
    background-repeat: no-repeat;
    background-attachment: fixed;
+   background-position: center top;
    text-align: center;
    margin-bottom: 100px;
 }
