tweaks from Radhika

--- a/webpagemaker/learning_projects/static/BTWF_local_meetup/btwf_local.css
+++ b/webpagemaker/learning_projects/static/BTWF_local_meetup/btwf_local.css
@@ -44,7 +44,6 @@ header {
   font-size: 1.5em;
   color: white;
   padding-top: 10px;
-  padding-bottom: 0px;
 }
 
 h1,h2,h3,h4,h5 {
@@ -52,8 +51,11 @@ h1,h2,h3,h4,h5 {
   color: #EF4036;
   padding: 0px;
   margin: 0px;
-}
+  padding-top: -10px;
+  padding-bottom: 7px;
+  margin-top: 0px;
 
+}
 
 .left {
   float: left;
@@ -100,10 +102,20 @@ h1,h2,h3,h4,h5 {
   font-size: 0.9em;
   line-height: 1.4em;
   padding: 0px;
-  min-height: 135px;
+  min-height: 125px;
 }
 
 p {
   padding: 15px;
   margin: 0;
+}
+
+.social {
+  text-align: right;
+  margin-right: 5px;
+  bottom: 5px;
+}
+
+.twittericon {
+  text-align: right;
 }
