Removing extra </p>, adjust some alignment

--- a/webpagemaker/learning_projects/templates/learning_projects/BTWF_local_meetup.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/BTWF_local_meetup.html
@@ -46,10 +46,12 @@ This is where you can share the details of your event including the time and day
 
     <div class="left">
       <p>
-Join us at Brooklyn School for a community event calling all young people to step out of their comfort zone and proudly display their unique qualities on a personalized t-shirt. Help to bridge the gap between different cliques and groups in your community by showing how similar we all really are to each other.</p>
+        Join us at Brooklyn School for a community event calling all young people to step out of their comfort zone and proudly display their unique qualities on a personalized t-shirt. Help to bridge the gap between different cliques and groups in your community by showing how similar we all really are to each other.
+      </p>
 
-        <p>Date: Sunday Dec 20
-        <br>Time: 9am</p>
+      <p>
+        Date: Sunday Dec 20
+        <br>Time: 9am
       </p>
 
 <!--
