--- a/webpagemaker/learning_projects/templates/learning_projects/BTWF_animated_gif.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/BTWF_animated_gif.html
@@ -10,7 +10,7 @@ Let's get started.
 
 1) READ THROUGH THE COMMENTS. This is a comment. Everything inside of this tag for HTML or '/*' for CSS, is not processed as code, but instead is just text comments about the code. For this project, the comments will give you instructions, hints and guides to completing the project, so skim down through the comments to get an understanding of what you are being asked to do.
 
-2) GET ORIENTED IN THE CODE. HTML is made up of tags that look like this <p> </p>. The tags tell you something about the information contained between them. Click on the tags in the code on this side of the editor to get a description of what each tag is for. Each tag has a beginning defined as <p> and an end defined as </p>
+2) GET ORIENTED IN THE CODE. HTML is made up of tags that look like this <p> </p>. The tags tell you something about the information contained between them. Click on the tags in the code on this side of the editor to get a description of what each tag is for. Each tag has a beginning defined as <p> and an end defined as </p>.
 -->
 
 <html>
@@ -36,7 +36,7 @@ It's pretty likely that you've seen an animated GIF before. An animated GIF is a
 
 The video below will show you how to make an animated GIF using a tool called GIMP.
 
-You can remix this video tutorial by using Mozilla Popcorn Maker to add your own fun tips and tricks. After you remix the video, you can add it back into this page by replacing it with your new embed code between the <iframe> </iframe> tags.
+You can remix this video tutorial by using Mozilla Popcorn Maker to add your own fun tips and tricks. After you remix the video, you can add it back into this page by replacing the <iframe> </iframe> tags below with the tags in your new embed code.
 
 Note: If you are not familiar with Mozilla Popcorn Maker, learn the basics here - https://popcorn.webmaker.org/templates/basic/?savedDataUrl=tutorial.json
 -->
