--- a/webpagemaker/learning_projects/templates/learning_projects/BTWF_animated_gif.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/BTWF_animated_gif.html
@@ -14,19 +14,19 @@ Let's get started.
 -->
 
 <html>
-    <head>
-        <meta charset="utf-8">
+<head>
+  <meta charset="utf-8">
 
 <!--
 The text within the <title> </title> tags will help people easily identify the page when it is minimized or open in one of many tabs. Since this is a personal page, feel free to customize the title to include your name. For example, 'Sam's Born Brave Animated GIFs' might be one way to go.
 -->
 
-        <title>My Born Brave Animated GIFs</title>
-	<link href='{{ HTTP_STATIC_URL }}BTWF_animated_gif/btwf_animated.css' rel='stylesheet'>
+  <title>My Born Brave Animated GIFs</title>
+  <link href='{{ HTTP_STATIC_URL }}BTWF_animated_gif/btwf_animated.css' rel='stylesheet'>
 
-  </head>
+</head>
 
-  <body>
+<body>
 	<img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/btwf_logo.png">
 
 	<div class="content_wrapper">
@@ -41,36 +41,37 @@ You can remix this video tutorial by using Mozilla Popcorn Maker to add your own
 Note: If you are not familiar with Mozilla Popcorn Maker, learn the basics here - https://popcorn.webmaker.org/templates/basic/?savedDataUrl=tutorial.json
 -->
 
-	<div class="frame">
-	<iframe src='http://popcorn.webmadecontent.org/fhb_' width='560' height='358' frameborder='0' mozallowfullscreen webkitallowfullscreen allowfullscreen></iframe>
-	</div>
+	  <div class="frame">
+	    <iframe src='http://popcorn.webmadecontent.org/fhb_' width='560' height='358' frameborder='0' mozallowfullscreen webkitallowfullscreen allowfullscreen></iframe>
+	  </div>
 
 <!--
 Use the section below to create your very own gallery of animated GIFs. The comments below explain where to insert your GIF links and how to grow your gallery.
 -->
 
-	<br>
-	<header>My Gallery of Animated GIFs</header><br>
+	  <br>
+	  <header>My Gallery of Animated GIFs</header>
+    <br>
 
-	<div class="left">
-		<div class="leftleft"><br>
-		<img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/arrow.png">
-		</div>
+    <div class="left">
+      <div class="leftleft"><br>
+        <img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/arrow.png">
+      </div>
 
-		<div class="leftright">
+      <div class="leftright">
 
 <!--
 Add your first animated GIF to the gallery by replacing the <img> tag below. Start by uploading your animated GIF(s) to Flickr or another image sharing site. Once you've done that, from Flickr, choose the first GIF you want to add, click "Share" and select the option to "Grab the HTML/BBCode". Copy the code and paste it here to replace the existing <img> tag. Then remove the link <a> </a> tags surrounding the <img> tag so that the GIF is not clickable. Similar options will exist for other image sharing sites.
 -->
 
-		<p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/sharingkindness_anim.gif"></p>
+		    <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/sharingkindness_anim.gif"></p>
 
-		</div>
-	</div>
+		  </div>
+	  </div>
 
-	<div class="right">
+	  <div class="right">
 
-		<div class="rightleft">
+		  <div class="rightleft">
 
 <!--
 Add your second animated GIF here by replacing the URL in the src value of the <img> tag with your own.
@@ -78,10 +79,10 @@ Add your second animated GIF here by replacing the URL in the src value of the <
 Copy the code starting with <p> and ending with </p> and paste right below to continue a second row of animated GIFs.
 -->
 
-		<p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/actofbravery_anim.gif"></p>
-		</div>
+		    <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/actofbravery_anim.gif"></p>
+		  </div>
 
-		<div class="rightright">
+		  <div class="rightright">
 
 <!--
 Here comes the third animated GIF. You are having fun with this aren't you? Replace the URL in the src value of the <img> tag with your own.
@@ -89,8 +90,8 @@ Here comes the third animated GIF. You are having fun with this aren't you? Repl
 When you've completed changing the first 3 animated GIFs in this row, copy the code starting with <p> and ending with </p> and paste it right below the ending </p> to start a second row of animated GIFs. Repeat this process to continue to build your GIF gallery.
 -->
 
-		<p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/brave_anim.gif"></p>
-		</div>
+		    <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/brave_anim.gif"></p>
+		  </div>
 
 		</div>
 	</div>
@@ -99,7 +100,7 @@ When you've completed changing the first 3 animated GIFs in this row, copy the c
 Whoa! Congratulate yourself. You just learned how to make animated GIFs and you showcased them in a gallery! And BIG applause for taking on the challenge of remixing this video in Popcorn Maker. With that act you have truly made this page your own. Now share it with as many people as you can and spread the love. :)
 -->
 
-  </body>
+</body>
 </html>
 
 <!--
