--- a/webpagemaker/learning_projects/static/BTWF_animated_gif/btwf_animated.css
+++ b/webpagemaker/learning_projects/static/BTWF_animated_gif/btwf_animated.css
@@ -13,9 +13,11 @@ body {
    font-size: 1em;
    padding-top: 10px;
    margin: 0 auto;
+   background-color: #0b0b0b;
    background-image: url('btwf_bg.png');
    background-repeat: no-repeat;
    background-attachment: fixed;
+   background-position: left top;
    text-align: center;
    margin-bottom: 100px;
 }
@@ -26,7 +28,7 @@ font-family: 'Open Sans Bold';
 
 .content_wrapper {
    position: relative;
-   width: 70%;
+   width: 1000px;
    top: 35px;
    margin: 0 auto;
    padding: 0px;
@@ -67,13 +69,13 @@ padding: 0px;
 }
 
 .left {
-        float:left;
-        width:38%;
+        float: left;
+        width: 380px;
         color: white;
     }
 .leftleft {
-        float:left;
-        width:25%;
+        float: left;
+        width: 50px;
         padding-left:5px;
         padding-right:5px;
         color: white;
@@ -82,26 +84,26 @@ padding: 0px;
     }
 .leftright {
         float:right;
-        width:65%;
+        width: 245px;
         padding-left:5px;
         padding-right:5px;
         color: white;
     }
 .right {
         float:right;
-        width:62%;
+        width:620px;
         color: white;
     }
 .rightleft {
         float:left;
-        width:40%;
+        width:240px;
         padding-left:5px;
         padding-right:5px;
         color: white;
     }
 .rightright {
         float:left;
-        width:40%;
+        width:240px;
         padding-left:5px;
         padding-right:5px;
         color: white;
