--- a/webpagemaker/learning_projects/static/BTWF_animated_gif/btwf_animated.css
+++ b/webpagemaker/learning_projects/static/BTWF_animated_gif/btwf_animated.css
@@ -28,8 +28,7 @@ font-family: 'Open Sans Bold';
 
 .content_wrapper {
    position: relative;
-   width: 1000px;
-   top: 35px;
+   width: 750px;
    margin: 0 auto;
    padding: 0px;
 }
@@ -50,16 +49,28 @@ padding: 0px;
 margin: 0px auto;
 }
 
+.gallery_wrapper {
+  margin-left: -20px;
+  position: relative;
+}
+
 .gallery {
+display: inline-block;
 width: 180px;
 height: 210px;
 border-width: 15px;
 border-color: white;
 border-style: solid;
 padding: 0px;
-margin: 0px auto;
+margin: 20px;
 line-height: 200px;
 margin-bottom: 20px;
+}
+
+.arrow {
+  position: absolute;
+  left: -120px;
+  top: 50px;
 }
 
 img {
@@ -68,43 +79,6 @@ margin: 0px;
 padding: 0px;
 }
 
-.left {
-        float: left;
-        width: 380px;
-        color: white;
-    }
-.leftleft {
-        float: left;
-        width: 50px;
-        padding-left:5px;
-        padding-right:5px;
-        color: white;
-        vertical-align: bottom;
-        text-align: right;
-    }
-.leftright {
-        float:right;
-        width: 245px;
-        padding-left:5px;
-        padding-right:5px;
-        color: white;
-    }
-.right {
-        float:right;
-        width:620px;
-        color: white;
-    }
-.rightleft {
-        float:left;
-        width:240px;
-        padding-left:5px;
-        padding-right:5px;
-        color: white;
-    }
-.rightright {
-        float:left;
-        width:240px;
-        padding-left:5px;
-        padding-right:5px;
-        color: white;
-    }
+.logo {
+  margin-bottom: 35px;
+}
