--- a/webpagemaker/learning_projects/templates/learning_projects/BTWF_animated_gif.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/BTWF_animated_gif.html
@@ -27,9 +27,8 @@ The text within the <title> </title> tags will help people easily identify the p
 </head>
 
 <body>
-	<img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/btwf_logo.png">
-
 	<div class="content_wrapper">
+	  <img class="logo" src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/btwf_logo.png">
 
 <!--
 It's pretty likely that you've seen an animated GIF before. An animated GIF is an image file made up of a series of progressive images that loop to create a sort of video animation. They can be added to web pages just like you would add any image file.
@@ -53,25 +52,15 @@ Use the section below to create your very own gallery of animated GIFs. The comm
 	  <header>My Gallery of Animated GIFs</header>
     <br><br>
 
-    <div class="left">
-      <div class="leftleft"><br>
-        <img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/arrow.png">
-      </div>
-
-      <div class="leftright">
+    <div class="gallery_wrapper">
+      <img class="arrow" src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/arrow.png">
 
 <!--
 Add your first animated GIF to the gallery by replacing the <img> tag below. Start by uploading your animated GIF(s) to Flickr or another image sharing site. Once you've done that, from Flickr, choose the first GIF you want to add, click "Share" and select the option to "Grab the HTML/BBCode". Copy the code and paste it here to replace the existing <img> tag. Then remove the link <a> </a> tags surrounding the <img> tag so that the GIF is not clickable. Similar options will exist for other image sharing sites.
 -->
 
-		    <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/sharingkindness_anim.gif"></p>
-
-		  </div>
-	  </div>
-
-	  <div class="right">
-
-		  <div class="rightleft">
+      <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/sharingkindness_anim.gif"></p>
+      <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/sharingkindness_anim.gif"></p>
 
 <!--
 Add your second animated GIF here by replacing the URL in the src value of the <img> tag with your own.
@@ -79,10 +68,8 @@ Add your second animated GIF here by replacing the URL in the src value of the <
 Copy the code starting with <p> and ending with </p> and paste right below to continue a second row of animated GIFs.
 -->
 
-		    <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/actofbravery_anim.gif"></p>
-		  </div>
-
-		  <div class="rightright">
+      <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/actofbravery_anim.gif"></p>
+      <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/actofbravery_anim.gif"></p>
 
 <!--
 Here comes the third animated GIF. You are having fun with this aren't you? Replace the URL in the src value of the <img> tag with your own.
@@ -90,10 +77,10 @@ Here comes the third animated GIF. You are having fun with this aren't you? Repl
 When you've completed changing the first 3 animated GIFs in this row, copy the code starting with <p> and ending with </p> and paste it right below the ending </p> to start a second row of animated GIFs. Repeat this process to continue to build your GIF gallery.
 -->
 
-		    <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/brave_anim.gif"></p>
-		  </div>
+      <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/brave_anim.gif"></p>
+      <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/brave_anim.gif"></p>
 
-		</div>
+    </div>
 	</div>
 
 <!--
