Use CSS for positioning instead of <br>s

--- a/webpagemaker/learning_projects/static/BTWF_animated_gif/btwf_animated.css
+++ b/webpagemaker/learning_projects/static/BTWF_animated_gif/btwf_animated.css
@@ -35,7 +35,7 @@ font-family: 'Open Sans Bold';
 
 header {
    color: #EF4036;
-   margin: 0 auto;
+   margin: 36px auto;
    font-size: 1.5em;
 }
 
