--- a/webpagemaker/learning_projects/static/BTWF_animated_gif/btwf_animated.css
+++ b/webpagemaker/learning_projects/static/BTWF_animated_gif/btwf_animated.css
@@ -13,13 +13,13 @@ body {
    font-size: 1em;
    padding-top: 10px;
    margin: 0 auto;
+   margin-bottom: 100px;
    background-color: #0b0b0b;
    background-image: url('btwf_bg.png');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: left top;
    text-align: center;
-   margin-bottom: 100px;
 }
 
 strong {
@@ -31,6 +31,7 @@ font-family: 'Open Sans Bold';
    width: 750px;
    margin: 0 auto;
    padding: 0px;
+   overflow: hidden;
 }
 
 header {
