--- a/webpagemaker/learning_projects/templates/learning_projects/BTWF_animated_gif.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/BTWF_animated_gif.html
@@ -27,6 +27,7 @@ The text within the <title> </title> tags will help people easily identify the p
 </head>
 
 <body>
+<div class="outer">
 	<div class="content_wrapper">
 	  <img class="logo" src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/btwf_logo.png">
 
@@ -73,6 +74,7 @@ When you've completed changing the first 3 animated GIFs in this row, copy the c
 
     </div>
 	</div>
+</div>
 
 <!--
 Whoa! Congratulate yourself. You just learned how to make animated GIFs and you showcased them in a gallery! And BIG applause for taking on the challenge of remixing this video in Popcorn Maker. With that act you have truly made this page your own. Now share it with as many people as you can and spread the love. :)
