Replace odd usage of <p> with the more standard <div>

--- a/webpagemaker/learning_projects/templates/learning_projects/BTWF_animated_gif.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/BTWF_animated_gif.html
@@ -56,21 +56,21 @@ Use the section below to create your very own gallery of animated GIFs. The comm
 Add your first animated GIF to the gallery by replacing the <img> tag below. Start by uploading your animated GIF(s) to Flickr or another image sharing site. Once you've done that, from Flickr, choose the first GIF you want to add, click "Share" and select the option to "Grab the HTML/BBCode". Copy the code and paste it here to replace the existing <img> tag. Then remove the link <a> </a> tags surrounding the <img> tag so that the GIF is not clickable. Similar options will exist for other image sharing sites.
 -->
 
-      <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/sharingkindness_anim.gif"></p>
+      <div class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/sharingkindness_anim.gif"></div>
 
 <!--
 Add your second animated GIF here by replacing the URL in the src value of the <img> tag with your own.
 -->
 
-      <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/actofbravery_anim.gif"></p>
+      <div class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/actofbravery_anim.gif"></div>
 
 <!--
 Here comes the third animated GIF. You are having fun with this aren't you? Replace the URL in the src value of the <img> tag with your own.
 
-When you've completed changing the first 3 animated GIFs in this row, copy the code starting with <p> and ending with </p> and paste it right below the ending </p> to start a second row of animated GIFs. Repeat this process to continue to build your GIF gallery.
+When you've completed changing the first 3 animated GIFs in this row, copy the code starting with <div> and ending with </div> and paste it right below the ending </div> to start a second row of animated GIFs. Repeat this process to continue to build your GIF gallery.
 -->
 
-      <p class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/brave_anim.gif"></p>
+      <div class ="gallery"><img src="{{ HTTP_STATIC_URL }}BTWF_animated_gif/brave_anim.gif"></div>
 
     </div>
 	</div>
