Added setDomainName method to GA snippet to track subdomain visits.

--- a/webpagemaker/learning_projects/templates/learning_projects/zoo.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/zoo.html
@@ -37,6 +37,7 @@
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-35433268-13']);
+            _gaq.push(['_setDomainName', 'webmaker.org']);
             _gaq.push(['_trackPageview']);
             (function() {
                 var ga = document.createElement('script'); ga.type = 'text/javascript';
