Switch beta.openbadges.org to backpack.openbadges.org

--- a/webpagemaker/editor/templates/editor/editor.html
+++ b/webpagemaker/editor/templates/editor/editor.html
@@ -173,6 +173,6 @@
       document.body.appendChild(script);
     });
     </script>
-    <script src="//beta.openbadges.org/issuer.js" async></script>
+    <script src="//backpack.openbadges.org/issuer.js" async></script>
   </body>
 </html>
